start basic live measurements components
got components to work, but the "live update" is bugged

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+:root {
+  --main-margin-left: 10vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#header-text{
+  margin-left: var(--main-margin-left);
+  font-size: 2.5rem;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #003B71;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  color: white;
+}
+
+.App-main {
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: var(--main-margin-left);
+  align-items: flex-start;
+  /* justify-content: center; */
+  /* font-size: calc(10px + 2vmin); */
+  margin-top: 16px;
+  color: black;
+}
+
+.App-main-live-cards {
+  display: flex;
+  flex-direction: row;
+}
+
+Card{
+  width: 18rem;
+  display: flex;
+  flex-direction: row;
+  margin-left: 16px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
