refactor code for custom hooks, collapsible data selection
refactor code out of App.js for reproducibility
collapsible data selection

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,42 @@
   margin-top: 24px;
 }
 
+#arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-bottom: 100px solid black;
+}
+
+#arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+  border-top: 100px solid black;
+}
+
+
+.arrow {
+  top: 90%;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.up {
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+
 /* .card {
   width: '18rem'
 } */
