--- a/src/App.css
+++ b/src/App.css
@@ -39,19 +39,13 @@
 }
 
 #arrow-up {
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 100px solid black;
+  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
 }
 
 #arrow-down {
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-top: 100px solid black;
+  transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
 }
 
 
