--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,29 @@
   background-color: #F8F9FA;
 }
 
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  z-index: 100;
+  width: 300px;
+}
+
+.content {
+  flex: 1 0 auto;
+  padding-left: 300px;
+  /* enable grow, disable shrink */
+}
+
+.App-layout {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
 .App-header {
   background-color: var(--primary-color);
   display: flex;
