--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,79 @@
   background-color: #F8F9FA;
   --primary-color:#003B71;
   --sidebar-width: 250px;
+
+  --font-weight-1: 600;
+  --font-weight-2: 500;
+  --font-weight-3: 400;
   /* width: 100%; */
 }
 
-#header-nav{
+#header-nav {
   margin-left: var(--main-margin-left);
   font-size: 2.5rem;
+}
+
+#main-title {
+  color: #896279;
+  font-weight: var(--font-weight-1);
+}
+
+#section-title-selection {
+  color: #A3A3A3;
+  font-weight: var(--font-weight-2);
+  padding-top: 50px;
+  padding-bottom: 25px;
+}
+
+.data-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.data-irradiance {
+  flex: 1;
+  width: '50%';
+}
+
+.data-irradiance h6 {
+  color: #A3A3A3;
+  font-weight: var(--font-weight-3);
+}
+
+.data-meteorological {
+  flex: 1;
+  width: '50%';
+}
+
+.data-meteorological h6 {
+  color: #A3A3A3;
+  font-weight: var(--font-weight-3);
+}
+
+.options-wrapper {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.options-export {
+  flex: 1;
+  width: '50%';
+}
+
+.options-export h4 {
+  color: #A3A3A3;
+  font-weight: var(--font-weight-2);
+}
+
+.options-graph {
+  flex: 1;
+  width: '50%';
+}
+
+.options-graph h4 {
+  color: #A3A3A3;
+  font-weight: var(--font-weight-2);
 }
 
 .App {
@@ -17,16 +84,11 @@
 
 
 /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-.content {
-  /* margin-left: var(--sidebar-width); change with Javascript along with sidebar width */
-  transition: margin-left .5s; /* If you want a transition effect */
+.main-content {
   padding: 20px;
+  padding-top: 20px;
+  padding-right: 100px;
 }
-
-/* .content {
-  display: flex;
-  flex-direction: column;
-} */
 
 .App-layout {
   height: 100%;
