date selection in graph options
export options:
- hover and click buttons
- more dynamic button sizes

graph options:
- date selection/date picker
- date shifter on top of date picker

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,12 @@
   align-content: center;
 }
 
+.graph-options-wrapper{
+  padding-top: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
 .App {
   background-color: #F8F9FA;
 }
