Add username/login prompt to sidebar footer
Also adds /get_box_user_info, which acts as a middleman for /users/me on the box api

--- a/src/newcomponents/Sidebar.css
+++ b/src/newcomponents/Sidebar.css
@@ -42,7 +42,7 @@
   }
   
   /* The sidebar links */
-  .sidebar a {
+  .sidebar a:not(.sidebar-user-name) {
     padding: var(--sidebar-padding);
     text-decoration: none;
     font-weight: 500; /* slightly bold */
